--- a/delivery-food-frontend/delivery-food/public/index.html
+++ b/delivery-food-frontend/delivery-food/public/index.html
@@ -14,5 +14,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA6YHrzKAkEgvk-wjz7yM3YFqNvC5eS6Dc&libraries=places"></script>
   </body>
 </html>
